2004-07-21 10:22 Mike Park  <mike.park@nasa.gov>

	* fixed bug reported by Alan Arslan compiling on IRIX64 with cc.
	* src/FAKEGeom.h added #include <time.h> to compile on IRIX64.
	* src/gridfiller.c added #ifdef HAVE_SDK to include FAKEGeom.h.

2004-07-16 16:45 Mike Park  <mike.park@nasa.gov>

	* Replaced obsolete SDK/Goolache/MeshMgr with SDK/UG_API methods.
	* src/Octree_Stub.c removed, goes away with SDK/Goolache/MeshMgr.

2004-07-16 15:10 Mike Park  <mike.park@nasa.gov>

	* Made 1.1.0 Release. SDK tagged DynLoader_MeshMgr_Used
	
2004-07-16 09:55 Mike Park  <mike.park@nasa.gov>

	* src/gridmove.c (gridmoveElasticRelaxationSubIteration) put in 
	two color Gauss-Seidel for linear elasticity.

2004-07-15 10:10 Mike Park  <mike.park@nasa.gov>

	* src/gridmove.c (gridmoveRelaxation*) generalized the grid
	relaxation methods. Now the relaxation scheme is controled is an
	argument to gridmoveRelaxationStartUp.
	* src/gridmove.h added relaxationScheme macros gridmove*_SCHEME
	to select relaxation method for gridmoveRelaxationStartUp.
	* src/gridfortran.c (gridmoverelax*_) generalized the grimove
	relax functions to call the general src/gridmove.c methods. 
	Now the relaxation scheme is controled is an argument to startup.

2004-07-14 12:56 Mike Park  <mike.park@nasa.gov>

	* src/gridmove.c now has ElasticRelaxation that should work like 
	the springs do. (move in steps and parallel)

2004-07-14 11:34 Mike Park  <mike.park@nasa.gov>

	* src/gridmath.c added LU and BackSolve 3x3 routines

2004-07-13 16:21 Mike Park  <mike.park@nasa.gov>

	* src/gridmove.c added compressed row storage to set up linear
	elasticity.

2004-07-13 15:12 Mike Park  <mike.park@nasa.gov>

	* Made 1.0.0 Release. First public release. 
	Use with FUN3D version 3.3.0

2004-07-09 12:25 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridMinARAroundNodeExceptGem) added.
	* src/gridinsert.c (gridCollapseEdge) used 
	gridMinARAroundNodeExceptGem to not collapse if causes bad AR.
